--- a/Application Code/About_us.html
+++ b/Application Code/About_us.html
@@ -10,7 +10,7 @@
 			<li><a href="Past_Recruiter.html">Past Recuriter</a></li>
 			<li><a href="current_campus_drive.html">Current Drives</a></li>
 			<li><a href="upcoming.html">Upcoming Companies</a></li>
-			<li><a href="contact us.html">Contact Us</a></li>	
+			<li><a href="contact.html">Contact Us</a></li>	
 		</ul>
 	</div>
 		
