finnal submission with ppt,flow chart and minor changes in files

--- a/Application Code/Past_Recruiter.html
+++ b/Application Code/Past_Recruiter.html
@@ -1,22 +1,19 @@
 <html>
 <title> Past Recruiters</title>
-<link rel="stylesheet" href="Past_Recruiter_css.css">
 <link rel="stylesheet" href="nav.css">
-<ul>
+<div class="nav">
+
+		<ul>
 			<li><a href="home.html">Home</a></li>
 			<li><a href="About_us.html">About Us</a></li>
-			<li><a href="Past_Recruiter.html">Past Recruiter</a></li>
+			<li><a href="Past_Recruiter.html">Past Recuriter</a></li>
 			<li><a href="current_campus_drive.html">Current Drives</a></li>
 			<li><a href="upcoming.html">Upcoming Companies</a></li>
-			<li><a href="contact us.html">Contact Us</a></li>	
+			<li><a href="contact.html">Contact Us</a></li>	
 		</ul>
-	</div>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
+		</div>
+		<br>
+<link rel="stylesheet" href="Past_Recruiter_css.css">
 <h1><center>Training and Placements </h1>
 </center>
 <h2><center> Past Recruiters </h3>
