--- a/Application Code/contact.html
+++ b/Application Code/contact.html
@@ -22,7 +22,7 @@
 
 			<li><a href="upcoming.html">Upcoming Companies</a></li>
 
-			<li><a href="contact.html">Contact Us</a></li>	
+			<li><a href="contact us.html">Contact Us</a></li>	
 
 		</ul>
 
@@ -101,6 +101,10 @@
 </tr>
 </table>
 </center>
+<hr>
+<a class="f" href="form1.html">
+	For Further queries,ask here!
+</a>
 <hr>
 </body>
 </html>
