--- a/Application Code/upcoming.html
+++ b/Application Code/upcoming.html
@@ -2,10 +2,23 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="upstyle.css">
+		<link rel="stylesheet" href="nav.css">
+<div class="nav">
+
+		<ul>
+			<li><a href="home.html">Home</a></li>
+			<li><a href="About_us.html">About Us</a></li>
+			<li><a href="Past_Recruiter.html">Past Recuriter</a></li>
+			<li><a href="current_campus_drive.html">Current Drives</a></li>
+			<li><a href="upcoming.html">Upcoming Companies</a></li>
+			<li><a href="contact.html">Contact Us</a></li>	
+		</ul>
+	</div>
 		<title>
 			UPCOMING CAMPUS DRIVES
 		</title>
 	</head>
+
 	<body>
 		<h1>
 			UPCOMING CAMPUS DRIVES
@@ -15,14 +28,14 @@
 			Sikkim Manipal Institute of Technology (SMIT) has produced excellent and dedicated professionals who have made their mark in all sectors thereby making SMIT as one of the sought after institute for the recruiters and the same is reflected in the placement performances over the years.
 			SMIT will be witnessing a mass recruitment session in the upcoming weeks.</p>
 			<h3>
-			<hr>
+			<p class="check">
 			Check this space for:
-			<ul>
+		</p>
+			<ol>
 				<li>Eligibility Criteria</li>
 				<li>Selection/Interview Process</li>
 				<li>Company Profile</li>
-			</ul>
-			<hr>
+			</ol>
 		</h3>
 	<center>
 			<table>
@@ -52,11 +65,11 @@
 						Minimum 7 CGPA required.
 					</td>
 					<td>
-						<ul>
+						<ol>
 							<li>Aptitude Round</li>
 							<li>Technical Round</li>
 							<li>HR Round</li>
-						</ul>
+						</ol>
 					</td>
 					<td>
 						15 March,2020
@@ -76,12 +89,12 @@
 						Minimum 7.5 CGPA required.
 					</td>
 					<td>
-						<ul>
+						<ol>
 							<li>Aptitude Round</li>
 							<li>Technical Round 1</li>
 							<li>Technical Round 2</li>
 							<li>HR Round</li>
-						</ul>
+						</ol>
 					</td>
 					<td>
 						20 February,2020
@@ -101,11 +114,11 @@
 						Minimum 7.5 CGPA required.
 					</td>
 					<td>
-						<ul>
+						<ol>
 							<li>Aptitude Round</li>
 							<li>Technical Round</li>
 							<li>HR Round</li>
-						</ul>
+						</ol>
 					</td>
 					<td>
 						27 March,2020
@@ -125,12 +138,12 @@
 						Minimum 7 CGPA required.
 					</td>
 					<td>
-						<ul>
+						<ol>
 							<li>Aptitude Round</li>
 							<li>Technical Round 1</li>
 							<li>Technical Round 2</li>
 							<li>HR Round</li>
-						</ul>
+						</ol>
 					</td>
 					<td>
 						5 April,2020
@@ -150,11 +163,11 @@
 						Minimum 8 CGPA required.
 					</td>
 					<td>
-						<ul>
+						<ol>
 							<li>Aptitude Round</li>
 							<li>Technical Round</li>
 							<li>HR Round</li>
-						</ul>
+						</ol>
 					</td>
 					<td>
 						1 April,2020
